--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "scripts": {
     "start": "node rest-api-backend.js",
     "dev": "nodemon rest-api-backend.js",
-    "build": "mkdir -p dist && cp -r public dist/ && cp *.html dist/ && cp *.json dist/",
+    "build": "mkdir -p dist && cp -r public dist/ && cp *.html dist/ && cp *.json dist/ && mkdir -p dist/{uploads,exports,data}",
     "test": "echo 'No test specified'",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "postinstall": "mkdir -p uploads exports data"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -21,9 +22,11 @@
     "marked": "^4.3.0",
     "multer": "^1.4.5-lts.1",
     "puppeteer": "^19.8.0",
+    "tinymce": "^6.8.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "nodemon": "^3.1.10"
   }
 }
